# InnoFeet

./: .gitmodules  .mxproject  InnoFeet.ioc  mx.scratch
Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Src/: fatfs.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_conf.c  usbd_storage_if.c  user_diskio.c
TrueSTUDIO/InnoFeet/: .cproject  .project  InnoFeet.elf.launch  InnoFeetLib
TrueSTUDIO/InnoFeet/InnoFeetLib/: CMakeLists.txt
TrueSTUDIO/InnoFeet/InnoFeetLib/InnoFeet/inc/: globals.h  i2c.h
TrueSTUDIO/InnoFeet/InnoFeetLib/InnoFeet/src/: morse.c  sensor.c  sensor_const.c
TrueSTUDIO/InnoFeet/InnoFeetLib/lib/: CMakeLists.txt
TrueSTUDIO/InnoFeet/InnoFeetLib/lib/inc/: byte_conversion.h  morse.h  queue.h  sensor.h  sensor_const.h  sentral.h  sentral_const.h
TrueSTUDIO/InnoFeet/InnoFeetLib/lib/src/: byte_conversion.c  i2c.c  queue.c  sensor.c  sensor_const.c  sentral.c  sentral_const.c
TrueSTUDIO/InnoFeet/InnoFeetLib/tests/: CMakeLists.txt  CMakeLists.txt.in  byte_conversion_test.cpp  i2c_test.cpp  morse_test.cpp  queue_test.cpp  sensor_test.cpp
